# mentor-me

./: .gitignore  pyproject.toml  requirements.txt
core/: settings.py  urls.py
home/: admin.py  forms.py  models.py  views.py
home/migrations/: 0001_initial.py  0002_review_role_at_time.py  0003_testimonial_delete_review.py  0004_alter_testimonial_user.py
jobs/: admin.py  filters.py  forms.py  models.py  views.py
jobs/migrations/: 0003_remove_job_mode.py
listings/: admin.py  filters.py  forms.py  models.py  views.py
listings/migrations/: 0005_listing_max_hours_per_booking_availability_booking.py  0006_transfer_availability_to_user.py  0007_review.py  0008_booking_student_marked_complete_and_more.py  0009_remove_listing_max_hours_per_booking_and_more.py
listings/templatetags/: calendar_tags.py
static/css/: booking.css  main.css
static/js/: booking.js  profile-edit.js
subscriptions/: models.py  views.py
templates/: about-and-counts.html  about.html  base.html  calendar_widget.html  contact.html  create-booking.html  create-review.html  edit-review.html  home.html  job-create.html  job-detail.html  job-list.html  listing-detail.html  listing-tiles.html  login.html  manage-availability.html  mentor-list.html  my-bookings.html  pricing.html  profile.html  student-bookings.html
users/: models.py  views.py
